// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceOverview -> List should render columns correctly 1`] = `
<EuiToolTip
  content="opbeans-python"
  delay="regular"
  id="service-name-tooltip"
  position="top"
>
  <ForwardRef(Styled(TransactionOverviewLink))
    serviceName="opbeans-python"
  >
    opbeans-python
  </ForwardRef(Styled(TransactionOverviewLink))>
</EuiToolTip>
`;

exports[`ServiceOverview -> List should render empty state 1`] = `
<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "20%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={50}
  initialSortField="serviceName"
  items={Array []}
/>
`;

exports[`ServiceOverview -> List should render with data 1`] = `
<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "20%",
      },
      Object {
        "field": "agentName",
        "name": "Agent",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Errors per minute",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={50}
  initialSortField="serviceName"
  items={
    Array [
      Object {
        "agentName": "nodejs",
        "avgResponseTime": null,
        "environments": Array [
          "test",
        ],
        "errorsPerMinute": 46.06666666666667,
        "serviceName": "opbeans-node",
        "transactionsPerMinute": 0,
      },
      Object {
        "agentName": "python",
        "avgResponseTime": 91535.42944785276,
        "environments": Array [],
        "errorsPerMinute": 12.6,
        "serviceName": "opbeans-python",
        "transactionsPerMinute": 86.93333333333334,
      },
    ]
  }
/>
`;
